<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:colorBackground"
    android:transitionGroup="true"
    android:transitionName="@string/transition_name_user_details"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginTop="@dimen/spacing_medium"
            android:contentDescription="@string/label_profile_image"
            android:background="@drawable/bg_form_item"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/name_divider"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionGo"
                android:inputType="textCapWords"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otherNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_divider"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otherNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_other_names"
                android:imeOptions="actionGo"
                android:inputType="textCapWords"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/name_divider"
            android:layout_width="0.1dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:maxLength="15"
                android:imeOptions="actionGo"
                android:inputType="phone"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_form_item"
            android:paddingStart="@dimen/spacing_small"
            android:paddingEnd="@dimen/spacing_small"
            android:background="@drawable/bg_form_item"
            android:layout_margin="@dimen/spacing_medium"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
            >

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:textSize="14sp"
                android:enabled="false"
                android:inputType="text"
                android:background="@null"
                android:importantForAutofill="no"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:background="@drawable/bg_form_item"
            android:minHeight="@dimen/height_form_item"
            android:paddingStart="@dimen/spacing_small"
            android:paddingEnd="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/ageLayout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:textSize="15sp"
                android:layout_gravity="center"
                />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/spacing_medium">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male"
                    android:textSize="14sp"
                    android:textColor="@color/colorOnSurface"
                    />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_female"
                    android:textColor="@color/colorOnSurface"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:textSize="14sp"
                    />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/farmNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/genderLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/farmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_farm_name"
                android:imeOptions="actionGo"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/farmLocationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_form_item"
            android:paddingStart="@dimen/spacing_small"
            android:paddingEnd="@dimen/spacing_small"
            android:background="@drawable/bg_form_item"
            android:layout_margin="@dimen/spacing_medium"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@id/farmNameLayout"
            >

            <TextView
                android:id="@+id/farmLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_farm_location"
                android:textSize="14sp"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/farmCoordinatesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form_item"
            android:minHeight="@dimen/height_form_item"
            android:padding="@dimen/spacing_small"
            android:layout_margin="@dimen/spacing_medium"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@id/farmLocationLayout"
            >

            <TextView
                android:id="@+id/farmCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_farm_coordinates"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coordinateList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                app:layout_constraintTop_toBottomOf="@id/farmCoordinates"
                tools:itemCount="4"
                tools:listitem="@layout/item_coordinate"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCoordinate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coordinateList"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_view_map"
                android:layout_marginTop="@dimen/spacing_small"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/coordinateList"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/label_save"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/farmCoordinatesLayout"
            />

        <FrameLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@android:color/black"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateBehavior="cycle"
                android:indeterminateDrawable="@drawable/ic_progress"
                />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>