<resources>
    <string name="app_name">Tellerium</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXVtYXJiZWxsbyIsImEiOiJjazl0eGRjb2kwOGdwM2hub3QyOGE1cHc3In0.kdjd_-x4NU46HclzvwXtGg</string>
    <string name="label_welcome">Welcome Back</string>
    <string name="label_continue">Login to continue</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="hint_email">Email address</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_users">Users</string>
    <string name="label_showing">Showing</string>
    <string name="label_home">Home</string>
    <string name="format_total">of %d</string>
    <string name="label_no_entry">No farms recorded yet.</string>
    <string name="label_display_count">Set display count</string>
    <string name="hint_user_count">User count</string>
    <string name="label_update">Update</string>
    <string name="label_user_image">User image</string>
    <string name="format_full_name">%s %s</string>
    <string name="label_location_prompt">Confirm location selected</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_phone_number">Phone number provided not valid</string>
    <string name="error_age">Date of birth entered not valid. Minimum age is 18.</string>
    <string name="error_gender">Gender not selected</string>
    <string name="error_farm_name">Farm name not provided</string>
    <string name="error_farm_location">Farm location not provided</string>
    <string name="error_coordinates">Incomplete farm coordinates, at least three coordinates required</string>
    <string name="label_dialog_title">How would like to pick location</string>
    <string name="action_current_location">Current location</string>
    <string name="action_pick_on_map">Pick on map</string>
    <string name="label_new_farm">New Farm</string>
    <string name="format_location">%f,%f</string>
    <string name="label_image">Image</string>
    <string name="label_map">Map</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_other_names">Other names</string>
    <string name="hint_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_farm_name">Farm name</string>
    <string name="label_farm_location">Farm location</string>
    <string name="label_save">Save</string>
    <string name="label_farm_coordinates">Farm coordinates</string>
    <string name="label_add">Add</string>
    <string name="label_view_map">View on map</string>
    <string name="error_first_name">First name format not valid</string>
    <string name="error_other_names">Other names format not valid</string>
    <string name="format_date_of_birth">%d-%d-%d</string>
    <string name="transition_name_user_details">User details</string>
</resources>